--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta name="author" content="Anna Fagan, Catherine Hawley, Kelly Daniel">
-        <title>Better Buy Nothing Website</title>
+        <title>Buyer's Market</title>
     </head>
     <body>
-        <h1>Buying Board</h1>
+        <h1>Buyer's Market</h1>
     </body>
 </html>
