added more posts

--- a/html/board.html
+++ b/html/board.html
@@ -54,7 +54,16 @@
                 </p>
             </div>
             <div class="home-decor">
-                <h2></h2>
+                <h2>Artificial Olive Tree</h2>
+                <p><b>Seller's Name:</b> Jannet Kesler</p>
+                <p><b>City:</b>Bellevue</p>
+                <p><b>Seller's Email:</b> j.kesler@bellevuecollege.edu</p>
+                <p><b>Category:</b>Home Decor</p>
+                <img src="../images/artificial-olive-tree.jpg" alt="Artificial olive tree with realistic leaves" style="width:40%;">
+                <p>
+                    About 6ft tall, pot included. The tree has realistic leaves but is indeed fake. Will need the ability to transport the pot 
+                    as one piece uppon pickup. Only available between 5 pm to 10 pm on weekdays.
+                </p>
             </div>
             <!-- End Home decor Section -->
             <!-- Start Office supplies Section -->
