--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <!-- ==== GLOBAL NAVIGATION ==== -->
     <nav>
       <a href="../index.html">Home</a>
-      <a href="post_form.html">Create a Post</a>
-      <a href="board.html">Post Board</a>
-      <a href="notifications_form">Get Notifications</a>
-      <a href="about.html">About Us</a>
+      <a href="/post_form.html">Create a Post</a>
+      <a href="/board.html">Post Board</a>
+      <a href="/notifications_form">Get Notifications</a>
+      <a href="/about.html">About Us</a>
     </nav>
   </body>
 </html>
