add internal css styling

--- a/html/post-item.html
+++ b/html/post-item.html
@@ -54,7 +54,7 @@
 
         <div>
     <label for="description">Item description</label>
-    <textarea name="description" id="description"></textarea>
+    <textarea name="description" id="description" placeholder="Describe your item"></textarea>
 </div>
 
         <!-- <label for="age">Age</label>
