fix form container width

--- a/html/post-item.html
+++ b/html/post-item.html
@@ -22,16 +22,11 @@
     font-family: Verdana, sans-serif;
 }
 
-/* Body styling */
-/* body {
-    background-color: hsl(240, 55%, 84%);
-    color: #333;
-    padding: 20px;
-} */
 
 /* Form container */
 form {
-    max-width: 600px;
+    width: 700px;
+    /* max-width: 100% !important; */
     margin: 0 auto;
     background-color: #99c1f8;
     padding: 20px 30px;
@@ -98,6 +93,7 @@ div {
       <a href="about.html">About Us</a>
     </nav>
 
+<!--Similar to notify-form-->
    <form id="listingForm">
   <label for="firstName">First Name</label>
   <input type="text" name="firstName" id="firstName" placeholder="First Name" required>
