--- a/html/about.html
+++ b/html/about.html
@@ -30,7 +30,7 @@
       <a href="./notify-form.html">Get Notifications</a>
       <a href="./about.html">About Us</a>
     </nav>
-
+    <div>
      <style>
 
         h2 {
@@ -52,6 +52,7 @@
 
         }
     </style>
+      </div>
 
    <div class="">
     
