changed filepath oon listing page

--- a/html/listings.html
+++ b/html/listings.html
@@ -22,7 +22,7 @@
     <!-- ==== GLOBAL NAVIGATION ==== -->
     <nav>
       <a href="../index.html">Home</a>
-      <a href="../html/post_form.html">Create a Post</a>
+      <a href="../html/post-form.html">Create a Post</a>
       <a href="../html/listings.html">Post Board</a>
       <a href="../html/notify-form.html">Get Notifications</a>
       <a href="../html/about.html">About Us</a>
