Added footer to all pages including our names, added hover tip in frequency for notifications, updated responsive for the hero image on home

--- a/html/listings.html
+++ b/html/listings.html
@@ -173,7 +173,8 @@
 
     <!-- ==== GLOBAL FOOTER ==== -->
     <footer>
-      <p>Four Functioneers — Bellevue College Project</p>
+      <p>© 2025 Buyer’s Market — Four Functioneers</p>
+      <p>Team: Catherine Hawley, Anna Fagan, Kelly Daniel, Lizbeth Garcia</p>
     </footer>
 
     <script></script>
