--- a/html/notify-confirmation.html
+++ b/html/notify-confirmation.html
@@ -52,6 +52,7 @@
 
     <footer>
       <p>© 2025 Buyer’s Market — Four Functioneers</p>
+      <p>Team: Catherine Hawley, Anna Fagan, Kelly Daniel, Lizbeth Garcia</p>
     </footer>
 
     <script>
