--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
 
     <footer>
       <p>© 2025 Buyer’s Market — Four Functioneers</p>
+      <p>Team: Catherine Hawley, Anna Fagan, Kelly Daniel, Lizbeth Garcia</p>
     </footer>
   </body>
 </html>
