add placeholder text to Item Description

--- a/html/post-item.html
+++ b/html/post-item.html
@@ -132,7 +132,7 @@
         />
 
         <label for="description">Item Description</label>
-        <textarea name="description" id="description"></textarea>
+        <textarea name="description" id="description" placeholder="Describe your item."></textarea>
      
         <div class="category-card">
           <label>Categories (choose one or more)</label>
