updated checkbox size and styles

--- a/html/listings.html
+++ b/html/listings.html
@@ -37,15 +37,19 @@
         <div class="listing-block">
           <div class="listing-categories">
             <label for="homeDecorCheck">Home Decor</label>
-            <input type="checkbox" id="homeDecorCheck" name="home-decor" />
+            <input type="checkbox" id="homeDecorCheck" name="home-decor"/>
           </div>
           <div class="listing-categories">
             <label for="officeSuppliesCheck">Office Supplies</label>
-            <input
-              type="checkbox"
-              id="officeSuppliesCheck"
-              name="office-supplies"
-            />
+            <input type="checkbox" id="officeSuppliesCheck" name="office-supplies"/>
+          </div>
+          <div class="listing-categories">
+            <label for="packingSuppliesCheck">Packing Supplies</label>
+            <input type="checkbox" id="packingSuppliesCheck" name="packing-supplies"/>
+          </div>
+          <div class="listing-categories">
+            <label for="artSuppliesCheck">Art Supplies</label>
+            <input type="checkbox" id="artSuppliesCheck" name="packing-supplies"/>
           </div>
         </div>
       </div>
