UI styling updates and bug fixes

--- a/html/about.html
+++ b/html/about.html
@@ -12,14 +12,13 @@
       content="Anna Fagan, Catherine Hawley, Kelly Daniel, Lizbeth Garcia"
     />
     <title>Buyer's Market</title>
+
     <!-- GLOBAL CSS -->
     <link rel="stylesheet" href="../css/style.css" />
 
-    <!-- PAGE-SPECIFIC CSS -->
-    <link rel="stylesheet" href="../css/about.css" />
-
     <style>
       h2 {
+        padding: 20px;
         text-align: center;
         color: #222;
       }
@@ -37,19 +36,19 @@
       }
     </style>
   </head>
-  <body>
+  <body class="about-page">
     <header>
       <h1>About Us</h1>
     </header>
     <!-- ==== GLOBAL NAVIGATION ==== -->
     <nav>
       <a href="../index.html">Home</a>
-      <a href="./post-item.html">Create a Post</a>
-      <a href="./listings.html">Listings</a>
-      <a href="./notify-form.html">Get Notifications</a>
-      <a href="./about.html">About Us</a>
+      <a href="./post-item.html">Post</a>
+      <a href="./listings.html">Browse</a>
+      <a href="./notify-form.html">Alerts</a>
+      <a href="./about.html">About</a>
     </nav>
-    <main class="containerl">
+    <main class="container">
       <div class="">
         <h2>Our Mission</h2>
         <div class="paragraph-box">
