--- a/html/listings.html
+++ b/html/listings.html
@@ -15,17 +15,17 @@
     <!-- GLOBAL CSS -->
     <link rel="stylesheet" href="../css/style.css" />
   </head>
-  <body>
+  <body class="listings-page">
     <header>
       <h1>Buyer's Market Posting Board</h1>
     </header>
     <!-- ==== GLOBAL NAVIGATION ==== -->
     <nav>
       <a href="../index.html">Home</a>
-      <a href="../html/post-form.html">Create a Post</a>
-      <a href="../html/listings.html">Post Board</a>
-      <a href="../html/notify-form.html">Get Notifications</a>
-      <a href="../html/about.html">About Us</a>
+      <a href="./post-item.html">Post</a>
+      <a href="./listings.html">Browse</a>
+      <a href="./notify-form.html">Alerts</a>
+      <a href="./about.html">About</a>
     </nav>
 
     <main class="container board-container">
