--- a/html/notify-form.html
+++ b/html/notify-form.html
@@ -10,19 +10,19 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
 
-  <body>
+  <body class="notify-page">
     <header>
-      <h1>Get Notifications</h1>
-      <p class="tagline">Sign up to be notified when new items are posted.</p>
+      <h1>Alerts | Buyer's Market</h1>
+      <!-- Rmoved tagline class and p -->
     </header>
 
     <!-- === NAVIGATION === -->
     <nav>
       <a href="../index.html">Home</a>
-      <a href="./post-item.html">Create a Post</a>
-      <a href="./listings.html">Listings</a>
-      <a href="./notify-form.html">Get Notifications</a>
-      <a href="./about.html">About Us</a>
+      <a href="./post-item.html">Post</a>
+      <a href="./listings.html">Browse</a>
+      <a href="./notify-form.html">Alerts</a>
+      <a href="./about.html">About</a>
     </nav>
 
     <!-- === MAIN CONTENT === -->
