--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
 
     <!-- GLOBAL CSS -->
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
 
-  <body class="home-bg">
+  <body class="home-page">
     <header>
-      <h1>Buyer’s Market</h1>
+      <h1>Home | Buyer’s Market</h1>
       <p class="tagline">
         A simple way to give and receive goods in your community.
       </p>
@@ -21,18 +27,19 @@
     <!-- === NAVIGATION === -->
     <nav>
       <a href="index.html">Home</a>
-      <a href="./html/post-item.html">Create a Post</a>
-      <a href="./html/listings.html">Listings</a>
-      <a href="./html/notify-form.html">Get Notifications</a>
-      <a href="./html/about.html">About Us</a>
+      <a href="./html/post-item.html">Post</a>
+      <a href="./html/listings.html">Browse</a>
+      <a href="./html/notify-form.html">Alerts</a>
+      <a href="./html/about.html">About</a>
     </nav>
 
     <!-- Hero -->
 
     <div class="hero">
       <div class="hero-overlay">
-        <h1>A Place Where Every Item Finds a New Home</h1>
-        <p>Your community marketplace for free & low-cost items.</p>
+        <div class="hero-text-container">
+          <h1>A Place Where Every Item Finds a New Home</h1>
+        </div>
       </div>
     </div>
 
