cleaned duplicate CSS block + restored correct nav button styling for Post & Listings pages

--- a/html/post-item.html
+++ b/html/post-item.html
@@ -122,22 +122,17 @@
     <!-- ==== GLOBAL NAVIGATION ==== -->
     <nav>
       <a href="../index.html">Home</a>
-      <a href="../html/post-item.html">Create a Post</a>
-      <a href="../html/listings.html">Listings</a>
-      <a href="../html/notify-form.html">Get Notifications</a>
-      <a href="../html/about.html">About Us</a>
+      <a href="./post-item.html">Post</a>
+      <a href="./listings.html">Browse</a>
+      <a href="./notify-form.html">Alerts</a>
+      <a href="./about.html">About</a>
     </nav>
 
     <main>
       <!--Similar to notify-form-->
       <form id="listingForm">
         <label for="itemPhoto">Upload a Photo of Your Item</label>
-        <input
-          type="file"
-          name="itemPhoto"
-          id="itemPhoto"
-          required
-        />
+        <input type="file" name="itemPhoto" id="itemPhoto" required />
 
         <label for="sellerName">Seller Name</label>
         <input
@@ -187,7 +182,8 @@
 
           <div class="notify-categories">
             <label
-              ><input type="checkbox" name="cat" value="Arts Supplies" /> Arts Supplies</label
+              ><input type="checkbox" name="cat" value="Arts Supplies" /> Arts
+              Supplies</label
             >
             <label
               ><input type="checkbox" name="cat" value="Home Decor" /> Home
