--- a/html/listings.html
+++ b/html/listings.html
@@ -46,10 +46,10 @@
     <!-- ==== GLOBAL NAVIGATION ==== -->
     <nav>
       <a href="../index.html">Home</a>
-      <a href="../html/post-item.html">Create a Post</a>
-      <a href="../html/listings.html">Listings</a>
-      <a href="../html/notify-form.html">Get Notifications</a>
-      <a href="../html/about.html">About Us</a>
+      <a href="./post-item.html">Post</a>
+      <a href="./listings.html">Browse</a>
+      <a href="./notify-form.html">Alerts</a>
+      <a href="./about.html">About</a>
     </nav>
 
     <main class="container board-container">
