Improve responsive behavior, adjust form layouts, and apply small UI style updates.

--- a/html/about.html
+++ b/html/about.html
@@ -28,11 +28,13 @@
         text-align: center;
         color: #222;
       }
-      body {
-        /*font-family: Verdana, sans-serif;*/
+
+      /* THIS IS OVERIDING GLOBAL AND CAN BE SAFELY REMOVED */
+      /* body {
+        font-family: Verdana, sans-serif;
         color: black;
         background: #f8f8f8;
-      }
+      } */
       .paragraph-box {
         background: white;
         padding: 20px;
