--- a/html/post-item.html
+++ b/html/post-item.html
@@ -31,8 +31,8 @@
 
       /* Form container */
       form {
-        width: 700px;
-        /* max-width: 100% !important; */
+        width: 100%;
+        max-width: 700px;
         margin: 01rem auto;
         background-color: #99c1f8;
         padding: 20px 30px;
